added role dropdown on form

--- a/user-onboarding/src/App.scss
+++ b/user-onboarding/src/App.scss
@@ -44,6 +44,12 @@ html {
         padding: 5px;
         text-align: center;
       }
+      select {
+        width: 70%;
+        border-radius: 5px;
+        padding: 5px;
+        text-align: center;
+      }
     }
     button {
       width: 20%;
